--- a/index.html
+++ b/index.html
@@ -6,31 +6,27 @@
     <title>Penguin Fashion</title>
     <link
       rel="shortcut icon"
-      href="icons/shopping-cart 1.png"
+      href="assets/icons/shopping-cart 1.png"
       type="image/x-icon"
     />
+
+    <!-- Google Fonts CDN -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <style>
-      .font-bebas-neue {
-        font-family: 'Bebas Neue', serif;
-      }
-      .font-roboto {
-        font-family: 'Roboto', serif;
-      }
-    </style>
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+
+    <!-- External CSS -->
+    <link rel="stylesheet" href="src/tailwind.css" />
   </head>
   <body class="font-roboto">
     <header class="bg-[#FFFBF0] lg:px-32 lg:pt-5 px-4 pt-4">
       <!-- Navigation Start -->
       <nav class="flex justify-between items-center">
         <div class="">
-          <img class="w-1/2" src="icons/logo.png" alt="" />
+          <img class="w-1/2" src="assets/icons/logo.png" alt="" />
         </div>
         <svg
           class="lg:hidden w-1/4"
@@ -78,14 +74,18 @@
               <button
                 class="bg-linear-to-r from-[#A4BC46] to-[#85A019] flex items-center text-base px-8 py-4 text-white rounded-lg"
               >
-                <img class="w-6" src="icons/shopping-cart 1.png" alt="" />
+                <img
+                  class="w-6"
+                  src="assets/icons/shopping-cart 1.png"
+                  alt=""
+                />
                 <h4>BUY NOW</h4>
               </button>
             </div>
           </div>
         </div>
         <div class="flex justify-center mb-7">
-          <img src="images/model.png" alt="" />
+          <img src="assets/images/model.png" alt="" />
         </div>
       </section>
     </header>
@@ -105,7 +105,7 @@
             <div>
               <img
                 class="p-5 rounded-2xl bg-[#F1F1F1]"
-                src="images/jacket-1.png"
+                src="assets/images/jacket-1.png"
               />
               <h4 class="text-[#363958] text-2xl font-bold mt-5">
                 Yellow Coat Jacket
@@ -119,7 +119,11 @@
                 <button
                   class="bg-linear-to-r from-[#A4BC46] to-[#85A019] flex items-center text-base px-8 py-4 text-white rounded-lg"
                 >
-                  <img class="w-6" src="icons/shopping-cart 1.png" alt="" />
+                  <img
+                    class="w-6"
+                    src="assets/icons/shopping-cart 1.png"
+                    alt=""
+                  />
                   <h4>BUY NOW</h4>
                 </button>
               </div>
@@ -131,7 +135,7 @@
             <div>
               <img
                 class="p-5 rounded-2xl bg-[#F1F1F1]"
-                src="images/jacket-2.png"
+                src="assets/images/jacket-2.png"
               />
               <h4 class="text-[#363958] text-2xl font-bold mt-5">
                 Ladies Jacket
@@ -145,7 +149,11 @@
                 <button
                   class="bg-linear-to-r from-[#A4BC46] to-[#85A019] flex items-center text-base px-8 py-4 text-white rounded-lg"
                 >
-                  <img class="w-6" src="icons/shopping-cart 1.png" alt="" />
+                  <img
+                    class="w-6"
+                    src="assets/icons/shopping-cart 1.png"
+                    alt=""
+                  />
                   <h4>BUY NOW</h4>
                 </button>
               </div>
@@ -157,7 +165,7 @@
             <div>
               <img
                 class="p-5 rounded-2xl bg-[#F1F1F1]"
-                src="images/jacket-3.png"
+                src="assets/images/jacket-3.png"
               />
               <h4 class="text-[#363958] text-2xl font-bold mt-5">
                 Woman Leather Jacket
@@ -171,7 +179,11 @@
                 <button
                   class="bg-linear-to-r from-[#A4BC46] to-[#85A019] flex items-center text-base px-8 py-4 text-white rounded-lg"
                 >
-                  <img class="w-6" src="icons/shopping-cart 1.png" alt="" />
+                  <img
+                    class="w-6"
+                    src="assets/icons/shopping-cart 1.png"
+                    alt=""
+                  />
                   <h4>BUY NOW</h4>
                 </button>
               </div>
@@ -192,7 +204,7 @@
             <div>
               <img
                 class="p-5 rounded-2xl bg-[#F1F1F1]"
-                src="images/jacket-4.png"
+                src="assets/images/jacket-4.png"
               />
               <h4 class="text-[#363958] text-2xl font-bold mt-5">
                 Snowboard Jacket Mens
@@ -206,7 +218,11 @@
                 <button
                   class="bg-linear-to-r from-[#A4BC46] to-[#85A019] flex items-center text-base px-8 py-4 text-white rounded-lg"
                 >
-                  <img class="w-6" src="icons/shopping-cart 1.png" alt="" />
+                  <img
+                    class="w-6"
+                    src="assets/icons/shopping-cart 1.png"
+                    alt=""
+                  />
                   <h4>BUY NOW</h4>
                 </button>
               </div>
@@ -218,7 +234,7 @@
             <div>
               <img
                 class="p-5 rounded-2xl bg-[#F1F1F1]"
-                src="images/jacket-5.png"
+                src="assets/images/jacket-5.png"
               />
               <h4 class="text-[#363958] text-2xl font-bold mt-5">
                 Man Leather Jackets
@@ -232,7 +248,11 @@
                 <button
                   class="bg-linear-to-r from-[#A4BC46] to-[#85A019] flex items-center text-base px-8 py-4 text-white rounded-lg"
                 >
-                  <img class="w-6" src="icons/shopping-cart 1.png" alt="" />
+                  <img
+                    class="w-6"
+                    src="assets/icons/shopping-cart 1.png"
+                    alt=""
+                  />
                   <h4>BUY NOW</h4>
                 </button>
               </div>
@@ -244,7 +264,7 @@
             <div>
               <img
                 class="p-5 rounded-2xl bg-[#F1F1F1]"
-                src="images/jacket-6.png"
+                src="assets/images/jacket-6.png"
               />
               <h4 class="text-[#363958] text-2xl font-bold mt-5">
                 Man Casual Jackets
@@ -258,7 +278,11 @@
                 <button
                   class="bg-linear-to-r from-[#A4BC46] to-[#85A019] flex items-center text-base px-8 py-4 text-white rounded-lg"
                 >
-                  <img class="w-6" src="icons/shopping-cart 1.png" alt="" />
+                  <img
+                    class="w-6"
+                    src="assets/icons/shopping-cart 1.png"
+                    alt=""
+                  />
                   <h4>BUY NOW</h4>
                 </button>
               </div>
@@ -273,7 +297,7 @@
           <div
             class="flex gap-9 items-center p-3 bg-white rounded-2xl drop-shadow-md"
           >
-            <img class="w-1/5" src="icons/house.png" alt="" />
+            <img class="w-1/5" src="assets/icons/house.png" alt="" />
             <div>
               <h5 class="text-[#363958] text-2xl font-bold">
                 Find the Perfect Fit
@@ -287,7 +311,7 @@
           <div
             class="flex gap-9 items-center p-3 bg-white rounded-2xl drop-shadow-md"
           >
-            <img class="w-1/5" src="icons/box.png" alt="" />
+            <img class="w-1/5" src="assets/icons/box.png" alt="" />
             <div>
               <h5 class="text-[#363958] text-2xl font-bold">Free Exchanges</h5>
               <p class="text-[#3E3E3E] mt-3">
@@ -298,7 +322,7 @@
           <div
             class="flex gap-9 items-center p-3 bg-white rounded-2xl drop-shadow-md"
           >
-            <img class="w-1/5" src="icons/question.png" alt="" />
+            <img class="w-1/5" src="assets/icons/question.png" alt="" />
             <div>
               <h5 class="text-[#363958] text-2xl font-bold">
                 Contact Our Seller
@@ -311,7 +335,7 @@
           </div>
         </div>
         <div class="lg:w-1/2">
-          <img src="images/shopping.png" alt="" />
+          <img src="assets/images/shopping.png" alt="" />
         </div>
       </section>
     </main>
